--- a/index.html
+++ b/index.html
@@ -163,15 +163,15 @@ I'm staying at home</h4>
             </li>
             <li class="skills-list-item">
               React
-              <div class="level level-angular"></div>
+              <div class="level level-react"></div>
             </li>
             <li class="skills-list-item">
               Vue.js
-              <div class="level level-angular"></div>
+              <div class="level level-vuejs"></div>
             </li>
             <li class="skills-list-item">
               Node.js
-              <div class="level level-angular"></div>
+              <div class="level level-nodejs"></div>
             </li>
           </ul>
         </div>
