--- a/index.html
+++ b/index.html
@@ -120,9 +120,9 @@ I'm staying at home</h4>
           </h2>
         <ul class="list">
           <li class="list-item">
-              <h4 class="list-item_title">Nexogan Web Development Company</h4>
-              <span class="list-item_date">Jan 2018 - Oct 2019</span>
-              <p class="list-item_text">Feeling romm</p>
+              <h4 class="list-item_title">I study at the institute</h4>
+              <span class="list-item_date">Sen 2018 - (?)</span>
+              <p class="list-item_text">Learn</p>
            </li>
         </ul>
         </div>
