--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ I'm staying at home</h4>
           </h2>
         <ul class="list">
           <li class="list-item">
-              <h4 class="list-item_title">I study at the institute</h4>
+              <h4 class="list-item_title">Study at university</h4>
               <span class="list-item_date">Sen 2018 - (?)</span>
               <p class="list-item_text">Learn</p>
            </li>
