--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <div class="container">
     <div class="profile">
-      <div class="profile-avatar"></div>
+      <div class="profile-preavatar"><div class="profile-avatar"></div></div>
       <div class="profile-info">
       <h2 class="heading heading-light">
         Profile
