--- a/index.html
+++ b/index.html
@@ -173,6 +173,10 @@ I'm staying at home</h4>
               Node.js
               <div class="level level-nodejs"></div>
             </li>
+            <li class="skills-list-item">
+              Git
+              <div class="level level-git"></div>
+            </li>
           </ul>
         </div>
       </div>
