--- a/index.html
+++ b/index.html
@@ -96,9 +96,9 @@
           <address class="about-address">308007, Belgorod
 Nekrasova 17B</address>
           <div class="about-contacts">
-            <a href="#"><span>t</span>: +(7915)-573-58-33</a> |
-            <a href="#"><span>e</span>: vadim.prog.2000@gmail.com</a> |
-            <a href="#"><span>w</span>: www.vadimagic.com</a>
+            <a href="#"><span class="about-contacts-item">t :</span> +(7915)-573-58-33</a> |
+            <a href="#"><span class="about-contacts-item">e :</span> vadim.prog.2000@gmail.com</a> |
+            <a href="#"><span class="about-contacts-item">w :</span> www.vadimagic.com</a>
           </div>
         </div>
         <div class="experience">
